# ai-counsellor

./: .dockerignore  .env.example  .gitignore  .replit  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml  replit.md  run_backend.sh
attached_assets/: Message_1769512275703.txt  Pasted-14-25-46-573-Running-build-in-Portland-USA-West-pdx1-14_1769594383228.txt  Pasted-2026-01-28T06-59-22-25589593Z-Collecting-anyio-5-0-0-4-_1769583732656.txt  Pasted-2026-01-28T08-53-46-834378075Z-2026-01-28T08-53-46-8343_1769590470936.txt  gemini_1769512287624.md  rzp-key.csv  skills_1769512287622.md
backend/: ai_counsellor.db  ai_counsellor.db.backup  ai_counsellor.py  auth.py  check_seed_data.py  database.py  debug_db.py  demo_data.py  email_service.py  gemini_key_manager.py  google_oauth.py  main.py  migrate_db.py  migrate_subscription.py  migrate_universities.py  models.py  process_logo.py  rate_limiter.py  razorpay_utils.py  real_universities_data.py  recommendation_engine.py  report_generator.py  requirements.txt  schemas.py  seed_production_data.py  seed_real_universities.py  subscriptions.py  test_card_data.py  test_sessions.py  universities_data.py  update_seed_data.py  validate_expansion.py  verified_universities.json  verify_ai_logic.py  verify_intent_switch.py  verify_payment.py  verify_program_expansion.py  verify_seed_programs.py
docs/: AI Counsellor – Brain & Automation Engine  ALLOWED AI ACTIONS (TOOLS)  CICD.md  Persistent Supervisor Agent  Premium Floating AI Counsellor UI  STAGE MODEL (STRICT – NO EXCEPTIONS)  Voice Interaction System (Two Clear Modes)
(+92 files in other folders)
