[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "edge-tts>=7.2.7",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "fpdf2>=2.8.5",
    "google-genai>=1.60.0",
    "httpx>=0.28.1",
    "oauthlib>=3.3.1",
    "passlib>=1.7.4",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
